syntax = "proto3";

// 命 令 号: 1006
// 命令名称: led_belt_expressions_continuous_set
// 命令描述: 灯带连续灯珠显示设置
// 文件名称: d1ac1006_led_belt_expressions_continuous_set.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbLedBeltExpressionsContinuousSet";

message LedBeltExpressionsContinuousSetRequest {
  // ATTR: REQUSET
  message info {
    uint32 start_pixel = 1;
    uint32 end_pixel = 2;
    uint32 rgbc = 3;
    uint32 port = 4;
  }
  repeated info pixel=1;
}

message LedBeltExpressionsContinuousSetResponse {

}
